--- a/app/components/Navbar/navbar.module.scss
+++ b/app/components/Navbar/navbar.module.scss
@@ -2,9 +2,14 @@
 
 // navbar
 .nav {
-  backdrop-filter: blur(20px);
-  padding: 1rem 2rem;
+  background-color: rgba(248, 250, 252, 0.2);
+  // background-color: red;
+  z-index: 9999;
+  backdrop-filter: blur(50px);
+  padding: 0.8rem 2rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.171);
+  position: sticky;
+  top: 0;
 
   // navbar container
   .nav_container {
@@ -79,8 +84,7 @@
   border: 1px solid rgba(76, 0, 130, 0.466);
   display: flex;
   flex-direction: column;
-  background-color: #4e46e57c;
-  backdrop-filter: blur(200px);
+  background-color: rgba(255, 255, 255);
 
   a {
     text-decoration: none;
