--- a/app/components/Landing/landing.module.scss
+++ b/app/components/Landing/landing.module.scss
@@ -94,7 +94,8 @@
 
     .landing_img_content {
       @media screen and (max-width: 700px) {
-        width: 100%;
+        // width: 100%;
+        display: none;
       }
       img {
         width: 600px;
