--- a/app/components/Navbar/navbar.module.scss
+++ b/app/components/Navbar/navbar.module.scss
@@ -8,7 +8,7 @@
   backdrop-filter: blur(50px);
   padding: 0.8rem 2rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.171);
-  position: sticky;
+  // position: sticky;
   top: 0;
 
   // navbar container
