--- a/app/components/Navbar/navbar.module.scss
+++ b/app/components/Navbar/navbar.module.scss
@@ -9,7 +9,7 @@
   padding: 0.8rem 2rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.171);
   // position: sticky;
-  top: 0;
+  // top: 0;
 
   // navbar container
   .nav_container {
