--- a/app/products/products.module.scss
+++ b/app/products/products.module.scss
@@ -2,17 +2,19 @@
   //   max-width: 1500px;
   margin: auto;
   padding: 0rem 0rem;
-  display: flex;
+  // display: flex;
+  display: grid;
+  grid-template-columns: 300px 1fr;
   gap: 5rem;
   //   justify-content: space-between;
 
   .sidebar {
-    width: 20%;
-    position: sticky;
-    top: 0;
+    width: 300px;
+
+    // position: sticky;
+    // top: 0;
     border-right: 1px solid rgba(0, 0, 0, 0.336);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.336);
-    height: max-content;
+    // border-bottom: 1px solid rgba(0, 0, 0, 0.336);
 
     .price_range {
       padding: 2rem 1rem;
@@ -22,25 +24,15 @@
       }
 
       input {
-        font-family: inherit;
-        padding: 0.4rem 0.2rem;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
+        padding: 0.5rem 0.2rem;
         width: 100%;
+        font-family: inherit;
       }
 
-      button {
-        display: flex;
-        background-color: rgb(15, 23, 42);
-        color: white;
-        font-family: inherit;
-        border: none;
-        padding: 0.5rem 2rem;
-        border-radius: 10px;
-        cursor: pointer;
-
-        &:hover {
-          opacity: 0.8;
-        }
+      label {
+        margin-left: 0.4rem;
+        // margin-bottom: 1rem;
       }
     }
 
@@ -67,11 +59,9 @@
         margin-bottom: 1rem;
       }
 
-      select {
-        padding: 0.5rem 0.1rem;
-        font-family: inherit;
-        width: 100%;
+      input {
         margin-bottom: 1rem;
+        margin-right: 0.5rem;
       }
     }
   }
@@ -141,4 +131,13 @@
       }
     }
   }
+}
+
+.loading_skeleton_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 200px));
+  margin: 1rem 0;
+  display: grid;
+  grid-column-gap: 30px;
+  grid-row-gap: 40px;
 }
