--- a/app/components/Navbar/navbar.module.scss
+++ b/app/components/Navbar/navbar.module.scss
@@ -6,10 +6,10 @@
   // background-color: red;
   z-index: 9999;
   backdrop-filter: blur(50px);
-  padding: 0.8rem 2rem;
+  padding: 1.1rem 2rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.171);
-  // position: sticky;
-  // top: 0;
+  position: sticky;
+  top: 0;
 
   // navbar container
   .nav_container {
@@ -18,6 +18,18 @@
     align-items: center;
     max-width: 1500px;
     margin: auto;
+
+    .cart_items {
+      display: flex;
+      background-color: #4f46e5;
+      color: white;
+      padding: 0.3rem 1rem;
+      border-radius: 20px;
+
+      svg {
+        margin-right: 5px;
+      }
+    }
 
     // logo
     .logo {
@@ -47,7 +59,7 @@
         height: 100%;
         width: 25px;
         object-fit: cover;
-        margin-bottom: 1;
+        margin-right: 1rem;
       }
     }
   }
