--- a/app/products/[product]/product_item.module.scss
+++ b/app/products/[product]/product_item.module.scss
@@ -1,15 +1,23 @@
+#product_item {
+  height: calc(100vh - 100px);
+}
+
 .product_item_container {
-  padding: 10rem 0;
+  height: 100%;
+  padding-top: 10%;
+  // padding: 10rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: start;
   max-width: 1500px;
   margin: auto;
-  display: flex;
-  justify-content: center;
 
   .image_content {
     // border: 1px solid rgba(0, 0, 0, 0.384);
-    padding: 2rem 5rem;
+    // padding: 2rem 5rem;
     margin-right: 5rem;
-
+    padding-right: 2rem;
     img {
       height: auto;
       width: auto;
@@ -18,7 +26,7 @@
 
   .text_content {
     h1 {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin-bottom: 0.2rem;
     }
 
@@ -52,14 +60,14 @@
     }
 
     .add_to_cart_btn {
-      padding: 0.5rem 2rem;
+      padding: 1rem 2rem;
       font-family: inherit;
-      background: linear-gradient(to left, skyblue, rgb(109, 40, 217));
+      background: black;
       border: none;
       font-size: 1rem;
       color: white;
       letter-spacing: 0.6px;
-      border-radius: 10px;
+      border-radius: 50px;
       cursor: pointer;
 
       &:hover {
