Implemented a footer, added a loading skeleton to product items, and resolved the price filter bug

--- a/app/products/products.module.scss
+++ b/app/products/products.module.scss
@@ -5,7 +5,11 @@
   // display: flex;
   display: grid;
   grid-template-columns: 300px 1fr;
+  // grid-template-rows: 1fr 200px;
+  min-height: 100vh;
   gap: 5rem;
+  justify-content: start;
+  align-items: start;
   //   justify-content: space-between;
 
   .sidebar {
