--- a/app/cart/cart.module.scss
+++ b/app/cart/cart.module.scss
@@ -2,21 +2,22 @@
   padding: 5rem 7rem;
   display: grid;
   grid-template-columns: 1fr 400px;
-  grid-template-rows: 350px;
+  // grid-template-rows: 350px;
+  align-items: start;
+  min-height: 100vh;
 }
 
 #cart_item {
-  margin-top: 1rem;
   display: grid;
-  grid-template-columns: 80px 450px 100px 80px 20px;
+  margin-bottom: 2rem;
+  grid-template-columns: 70px 470px 100px 80px 20px;
   justify-content: space-between;
-  // border: 1px solid gray;
   box-shadow: 1px 1px 5px rgba(128, 128, 128, 0.384);
 
   align-items: center;
   //   grid-gap: 1rem;
-  padding: 0 1rem;
-  height: 130px;
+  padding: 0.7rem 1rem;
+  // height: 130px;
   max-width: 1100px;
 
   .product_details {
