--- a/app/products/[product]/product_item.module.scss
+++ b/app/products/[product]/product_item.module.scss
@@ -1,5 +1,6 @@
 #product_item {
-  height: calc(100vh - 100px);
+  // height: calc(100vh - 100px);
+  min-height: calc(100vh - 1px);
 }
 
 .product_item_container {
@@ -28,6 +29,7 @@
     h1 {
       font-size: 1.5rem;
       margin-bottom: 0.2rem;
+      max-width: 600px;
     }
 
     .description {
