--- a/app/about/about.module.scss
+++ b/app/about/about.module.scss
@@ -1,15 +1,10 @@
-#contact {
-  min-height: calc(100vh - 60px);
+#about {
+  height: calc(100vh - 100px);
   display: flex;
-  flex-direction: column;
-  max-width: 1200px;
-  margin: auto;
 
-  .contact_container {
-    width: 100%;
-    padding: 2rem;
+  .about_container {
+    max-width: 1200px;
     margin: auto;
-    display: flex;
     background: linear-gradient(
         123.35deg,
         #643eff,
@@ -97,62 +92,16 @@
       ),
       #c2a6f1;
 
-    .contact_form_content {
-      width: 100%;
-      margin-bottom: 2rem;
-      color: white;
-      h1 {
-        font-size: 2rem;
-      }
-
-      p {
-        margin-bottom: 2rem;
-      }
+    padding: 5rem 2rem;
+    color: white;
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
 
-    .contact_form_content {
-      form {
-        display: flex;
-        flex-direction: column;
-
-        label {
-          margin-bottom: 0.1rem;
-          color: white;
-        }
-
-        input {
-          // align-self: flex-start;
-          width: 60%;
-          font-family: inherit;
-          padding: 0.5rem 0.2rem;
-          margin-bottom: 1rem;
-        }
-
-        textarea {
-          // align-self: flex-start;
-          width: 60%;
-          font-family: inherit;
-          padding: 0.5rem 0.2rem;
-          margin-bottom: 1rem;
-        }
-
-        button {
-          font-family: inherit;
-          padding: 0.5rem 1rem;
-          display: flex;
-          align-self: start;
-          background-color: #643eff;
-          border: none;
-          color: white;
-          border-radius: 10px;
-          transition: 0.5s all linear;
-          cursor: pointer;
-
-          &:hover {
-            opacity: 0.8;
-          }
-        }
-      }
+    p {
+      line-height: 200%;
+      text-align: justify;
     }
   }
 }
