--- a/app/components/Loading/loading.module.scss
+++ b/app/components/Loading/loading.module.scss
@@ -1,5 +1,9 @@
 .loading {
-  margin-top: 2rem;
+  // margin: 0rem 2rem;
+  // margin-left: 2rem;
+  // margin-right: 1rem;
+  // padding: 0 rem;
+  margin-left: 1rem;
   border: 1px solid black;
   height: 320px;
   width: 320px;
