--- a/app/about/about.module.scss
+++ b/app/about/about.module.scss
@@ -3,6 +3,7 @@
   display: flex;
 
   .about_container {
+    border-radius: 20px;
     max-width: 1200px;
     margin: auto;
     background: linear-gradient(
