--- a/app/cart/cart.module.scss
+++ b/app/cart/cart.module.scss
@@ -2,9 +2,20 @@
   padding: 5rem 7rem;
   display: grid;
   grid-template-columns: 1fr 400px;
+  grid-gap: 5rem;
+  @media screen and (max-width: 1550px) {
+    grid-template-columns: 1fr;
+  }
   // grid-template-rows: 350px;
   align-items: start;
   min-height: 100vh;
+}
+
+#cart {
+  @media screen and (max-width: 1250px) {
+    // max-width: 1400px;
+    overflow: auto;
+  }
 }
 
 #cart_item {
@@ -13,12 +24,15 @@
   grid-template-columns: 70px 470px 100px 80px 20px;
   justify-content: space-between;
   box-shadow: 1px 1px 5px rgba(128, 128, 128, 0.384);
+  grid-gap: 2rem;
 
   align-items: center;
   //   grid-gap: 1rem;
   padding: 0.7rem 1rem;
   // height: 130px;
   max-width: 1100px;
+  max-width: max-content;
+  min-width: max-content;
 
   .product_details {
     h3 {
