--- a/app/components/Footer/footer.module.scss
+++ b/app/components/Footer/footer.module.scss
@@ -5,7 +5,7 @@
   margin-top: 1rem;
 
   .footer_container {
-    padding: 2rem 0;
+    padding: 2rem 2rem;
     max-width: 1500px;
     margin: auto;
 
@@ -13,9 +13,20 @@
       display: flex;
       justify-content: center;
 
+      @media screen and (max-width: 800px) {
+        // flex-direction: column;
+        flex-wrap: wrap;
+        line-height: 150%;
+      }
+
       p {
-        margin-right: 5rem;
+        margin-right: 2rem;
         text-align: center;
+
+        @media screen and (max-width: 800px) {
+          line-height: 150%;
+          margin-bottom: 0.5rem;
+        }
       }
     }
 
