--- a/app/components/Landing/landing.module.scss
+++ b/app/components/Landing/landing.module.scss
@@ -12,6 +12,9 @@
     padding: 0;
   }
 
+  @media screen and (max-width: 800px) {
+    height: 100%;
+  }
   .landing_container {
     max-width: 1500px;
     margin: auto;
