--- a/app/components/ProductItemLoadingSkeleton/product_item_loading_skeleton.module.scss
+++ b/app/components/ProductItemLoadingSkeleton/product_item_loading_skeleton.module.scss
@@ -13,13 +13,13 @@
 
   .product_item_container {
     height: 100%;
-    padding-top: 10%;
     // padding: 10rem 0;
+    padding-top: 10%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: start;
-    max-width: 1500px;
+    // max-width: 1500px;
     margin: auto;
 
     .image_content {
