--- a/app/products/products.module.scss
+++ b/app/products/products.module.scss
@@ -1,29 +1,34 @@
 .products_container {
-  //   max-width: 1500px;
   margin: auto;
-  padding: 0rem 0rem;
-  // display: flex;
-  display: grid;
-  grid-template-columns: 300px 1fr;
-  // grid-template-rows: 1fr 200px;
-  min-height: 100vh;
-  gap: 5rem;
-  justify-content: start;
+  padding: 0rem 1rem;
+
+  display: flex;
   align-items: start;
-  //   justify-content: space-between;
+
+  min-height: 100vh;
+
+  .close_btn {
+    width: 30px;
+    // padding: 1rem;
+    margin: 0.8rem;
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+  }
 
   .sidebar {
-    width: 300px;
-    height: 100%;
+    position: fixed;
+    background-color: white;
+    z-index: 111;
+    overflow-y: auto;
+    width: 280px;
+    min-width: 280px;
+    height: 100vh;
     border-bottom: 1px solid rgba(0, 0, 0, 0.336);
-
-    // position: sticky;
-    // top: 0;
     border-right: 1px solid rgba(0, 0, 0, 0.336);
-    // border-bottom: 1px solid rgba(0, 0, 0, 0.336);
 
     .price_range {
-      padding: 2rem 1rem;
+      padding: 2rem 2rem 0 0;
 
       h1 {
         margin-bottom: 1rem;
@@ -38,14 +43,12 @@
 
       label {
         margin-left: 0.4rem;
-        // margin-bottom: 1rem;
       }
     }
 
     button {
       display: flex;
-      //   background-color: rgb(15, 23, 42);
-      // border: 1px solid rgb(15, 23, 42);
+
       border: none;
       color: white;
       font-family: inherit;
@@ -61,7 +64,7 @@
     }
 
     .category {
-      padding: 2rem 1rem;
+      padding: 2rem 2rem 0 0;
 
       h1 {
         margin-bottom: 1rem;
@@ -75,13 +78,29 @@
   }
 
   .products_items {
-    // background-color: red;
-    padding-top: 2rem;
+    // padding-top: 2rem;
+    padding: 5rem 2rem;
     width: 100%;
+    margin: auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 200px));
-    grid-template-rows: 1fr 1fr;
-    margin: 1rem 0;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 350px 350px 350px 350px 350px;
+    justify-content: space-around;
+    max-width: 1800px;
+
+    @media screen and (max-width: 1250px) {
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: auto;
+      max-width: 100%;
+    }
+
+    @media screen and (max-width: 1080px) {
+      grid-template-columns: 50% 50%;
+      // grid-template-rows: auto auto;
+      // padding-top: 5rem;
+    }
+
+    // margin: 1rem 0;
     display: grid;
     grid-column-gap: 30px;
     grid-row-gap: 40px;
@@ -105,6 +124,14 @@
           margin: auto;
           height: 120px;
           width: auto;
+
+          @media screen and (max-width: 1400px) {
+            height: 90px;
+          }
+
+          @media screen and (max-width: 800px) {
+            height: 70px;
+          }
         }
       }
 
@@ -119,26 +146,45 @@
           font-size: 1rem;
           margin-bottom: 1rem;
           font-weight: 500;
+
+          @media screen and (max-width: 800px) {
+            font-size: 0.8rem;
+          }
         }
 
         .trending_products_item_content_category {
           display: flex;
           align-self: flex-start;
-          padding: 0.5rem 0.8rem;
+          padding: 0.3rem 0.5rem;
           background-color: rgb(15, 23, 42);
           display: flex;
           align-items: center;
           margin-bottom: 1rem;
           border-radius: 10px;
 
+          @media screen and (max-width: 800px) {
+            padding: 0.2rem;
+            display: none;
+          }
+
           span {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             color: white;
             border-radius: 0.7rem;
+
+            @media screen and (max-width: 800px) {
+              display: none;
+              font-size: 0.7rem;
+            }
           }
 
           svg {
+            width: 20px;
             margin-right: 0.4rem;
+
+            @media screen and (max-width: 800px) {
+              display: none;
+            }
           }
         }
       }
@@ -146,11 +192,97 @@
   }
 }
 
+.mobile_loading {
+  min-height: 100vh;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+
+  @media screen and (max-width: 1250px) {
+    display: flex;
+  }
+}
+
 .loading_skeleton_container {
+  // margin: 1rem 2rem;
+  padding: 5rem 2rem;
+
+  gap: 20px;
+  // display: flex;
+  // flex-wrap: wrap;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 200px));
-  margin: 1rem 0;
-  display: grid;
-  grid-column-gap: 30px;
-  grid-row-gap: 40px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+
+  @media screen and (max-width: 1250px) {
+    display: none;
+  }
+}
+
+.mobile_filter_logo {
+  border: 1px solid #4f46e5;
+
+  position: absolute;
+  display: flex;
+  right: 0;
+  align-items: center;
+  padding: 0.2rem 0.5rem;
+  margin: 2rem 2rem;
+  cursor: pointer;
+  h4 {
+    font-weight: 500;
+    font-size: 0.9rem;
+  }
+  svg {
+    width: 25px;
+    margin-left: 0.5rem;
+  }
+}
+
+.mobile_show_filter {
+  margin-bottom: 2rem;
+  // position: absolute;
+  margin-top: 5rem;
+  margin-left: 1rem;
+  background-color: lightgray;
+
+  .price_range {
+    padding: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+
+    h1 {
+      margin-bottom: 1rem;
+    }
+
+    input {
+      margin-bottom: 1rem;
+      font-family: inherit;
+      padding: 0.2rem;
+    }
+
+    button {
+      border: none;
+      font-family: inherit;
+      padding: 0.2rem;
+    }
+  }
+
+  .category {
+    padding: 2rem 1rem;
+
+    h1 {
+      margin-bottom: 1rem;
+    }
+
+    input {
+      margin-bottom: 1rem;
+    }
+
+    label {
+      margin-left: 0.5rem;
+    }
+  }
 }
