--- a/app/cart/cart.module.scss
+++ b/app/cart/cart.module.scss
@@ -6,6 +6,10 @@
   @media screen and (max-width: 1550px) {
     grid-template-columns: 1fr;
   }
+
+  @media screen and (max-width: 1000px) {
+    padding: 5rem 2rem;
+  }
   // grid-template-rows: 350px;
   align-items: start;
   min-height: 100vh;
@@ -23,16 +27,16 @@
   margin-bottom: 2rem;
   grid-template-columns: 70px 470px 100px 80px 20px;
   justify-content: space-between;
-  box-shadow: 1px 1px 5px rgba(128, 128, 128, 0.384);
+  // box-shadow: 1px 1px 5px rgba(128, 128, 128, 0.384);
   grid-gap: 2rem;
 
   align-items: center;
   //   grid-gap: 1rem;
   padding: 0.7rem 1rem;
   // height: 130px;
-  max-width: 1100px;
-  max-width: max-content;
-  min-width: max-content;
+  // max-width: 1500px;
+  max-width: 1500px;
+  // min-width: max-content;
 
   .product_details {
     h3 {
@@ -120,4 +124,8 @@
       opacity: 0.8;
     }
   }
+}
+
+.loading {
+  text-align: center;
 }
