--- a/app/components/ProductItemLoadingSkeleton/product_item_loading_skeleton.module.scss
+++ b/app/components/ProductItemLoadingSkeleton/product_item_loading_skeleton.module.scss
@@ -11,6 +11,11 @@
     }
   }
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   .product_item_container {
     height: 100%;
     // padding: 10rem 0;
