--- a/app/components/TrendingProducts/trending_products.module.scss
+++ b/app/components/TrendingProducts/trending_products.module.scss
@@ -18,7 +18,7 @@
       grid-row-gap: 40px;
 
       @media screen and (max-width: 800px) {
-        grid-template-columns: repeat(auto-fill, minmax(260px, 50px));
+        // grid-template-columns: repeat(auto-fill, minmax(260px, 50px));
         justify-content: start;
         grid-column-gap: 20px;
       }
@@ -82,4 +82,9 @@
       }
     }
   }
+}
+
+.link {
+  text-decoration: none;
+  color: black;
 }
