--- a/app/products/[product]/product_item.module.scss
+++ b/app/products/[product]/product_item.module.scss
@@ -1,16 +1,28 @@
 #product_item {
   // height: calc(100vh - 100px);
-  min-height: calc(100vh - 1px);
+  min-height: calc(100vh - 100px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2rem;
 }
 
 .product_item_container {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: start;
   align-items: start;
   max-width: 1500px;
   margin: auto;
+
+  @media only screen and (max-width: 1000px) {
+    padding: 5rem 0;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .image_content {
     // border: 1px solid rgba(0, 0, 0, 0.384);
@@ -20,6 +32,12 @@
     img {
       height: auto;
       width: auto;
+
+      @media only screen and (max-width: 1000px) {
+        height: 70%;
+        width: 70%;
+        margin-bottom: 2rem;
+      }
     }
   }
 
@@ -28,6 +46,10 @@
       font-size: 1.5rem;
       margin-bottom: 0.2rem;
       max-width: 600px;
+
+      @media only screen and (max-width: 1000px) {
+        font-size: 1.3rem;
+      }
     }
 
     .description {
@@ -36,6 +58,10 @@
       text-align: justify;
       margin-bottom: 1rem;
       margin-top: 1rem;
+
+      @media only screen and (max-width: 1000px) {
+        font-size: 0.9rem;
+      }
     }
 
     .category {
