--- a/app/products/products.module.scss
+++ b/app/products/products.module.scss
@@ -2,7 +2,7 @@
   margin: auto;
   padding: 0rem 1rem;
 
-  display: flex;
+  // display: flex;
   align-items: start;
 
   min-height: 100vh;
@@ -79,13 +79,13 @@
 
   .products_items {
     // padding-top: 2rem;
-    padding: 5rem 2rem;
+    padding: 5rem 1.5rem;
     width: 100%;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 350px 350px 350px 350px 350px;
-    justify-content: space-around;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    // grid-template-rows: 350px 350px 350px 350px 350px;
+    justify-content: start;
     max-width: 1800px;
 
     @media screen and (max-width: 1250px) {
@@ -201,7 +201,7 @@
   text-align: center;
   margin: auto;
 
-  @media screen and (max-width: 1250px) {
+  @media screen and (max-width: 1770px) {
     display: flex;
   }
 }
@@ -215,14 +215,18 @@
   // flex-wrap: wrap;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 
-  @media screen and (max-width: 1250px) {
+  @media screen and (max-width: 1700px) {
     display: none;
   }
 }
 
 .mobile_filter_logo {
-  border: 1px solid #4f46e5;
+  border: 1px solid black;
 
   position: absolute;
   display: flex;
